--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ fetch(str)
               var obj= JSON.parse(data)
               result= obj["result"]["text"]
               document.write(result)
+              setTimeout(()=>{
+                bot()
+              },200;
               
             })
             }
