--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ bot()
 function bot(){
   let token = "1786057220:AAF0O8JWrnrUKbXY-SFHuT3_ZMl0SdR6t8k"
   let website = "https://api.telegram.org/bot"
-  let getMe = [website+token+"/getupdates"]
+  let getMe = []
  var str = getMe.toString()
  
  
